This documents significant changes in the dev branch of ksh 93u+m.
For full details, see the git log at: https://github.com/ksh93/ksh
Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.

2024-01-23:

- Fixed a rare crash or rare incorrect behaviour in .sh.tilde.{get,set}
  discipline functions for ~ expansion (see 2021-03-16 below).

2024-01-22:

- Fixed a bug in the loop invariants optimizer (SHOPT_OPTIMIZE) that caused
  expansions of name references to be incorrectly treated as invariant so they
  yielded the wrong values. Fix backported from from ksh 93v- 2013-02-13.

- Fixed a buffer overflow that could occur when using tab completion
  with multibyte filenames.

2024-01-21:

- [v1.1] New feature added: SRANDOM is a secure random number generator.
  It uses the native OS implementation of arc4random(3) or, absent that, an
  integrated OpenBSD-based version that uses the ChaCha20 cipher. An upper
  bound can be set by assigning its value to SRANDOM; subsequent numbers will
  be uniformly distributed between 0 and the value of the upper bound minus
  one, in a way that avoids "modulo bias". Assigning 0 restores default mode.

- A bug was fixed that caused both the 'set' and 'get'/'getn' discipline
  functions of a variable to be triggered when performing an assignment in
  an arithmetic expression; only the 'set' discipline is now triggered when
  assigning (as was always the documented behaviour). This applies to the
  shell's internal disciplines as well. For example, $RANDOM is no longer
  spuriously read from while seeding it via an arithmetic expression.

- Fixed: assigning to LINENO, RANDOM, or _ via an arithmetic expression gave
  undefined results on systems where sizeof(long double)!=sizeof(double).

2024-01-16:

- Fixed a parsing bug in array subscripts containing '=' in combination with
  a declaration command (such as 'typeset' or 'export'). For instance,
  'typeset -A arr; typeset -i arr[foo=bar]=123' now works correctly.
