@@ -1651,4 +1651,11 @@ unset i got bound
 SRANDOM=0
 
 # ======
+# Avoid printing a [0] element for .sh.match
+exp='.sh.match'
+got=${ $SHELL -c 'print ${!.sh.match}' }
+[[ $exp == "$got" ]] || err_exit "'print \${!.sh.match}' should not print a [0] subscript" \
+	"(expected ${ printf %q "$exp" }, got ${ printf %q "$got" })"
+
+# ======
 exit $((Errors<125?Errors:125))
